syntax = "proto3";
package minter.v1;
option go_package = "github.com/MinterTeam/mhub/chain/x/minter/types";

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

// BridgeValidator represents a validator's ETH address and its power
message BridgeValidator {
  uint64 power          = 1;
  string minter_address = 2;
}

// Valset is the Ethereum Bridge Multsig Set, each peggy validator also
// maintains an ETH key to sign messages, these are used to check signatures on
// ETH because of the significant gas savings
message Valset {
  uint64                   nonce   = 1;
  uint64                   minter_nonce   = 2;
  repeated BridgeValidator members = 3;
}

message ColdStorageTransferProposal {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  repeated cosmos.base.v1beta1.Coin amount = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

